# Marx

./: CMakeLists.txt  LICENSE  README.md
docs/: doxygen.config
ida_export/: export.py
ida_import/: ida_import.py  marx.py
include/: amd64.h  amd64_registers.h  base_analysis.h  blacklist_functions.h  block.h  block_semantics.h  dump_file.h  expression.h  external_functions.h  function.h  got.h  idata.h  mapped_elf.h  mapped_pe.h  memory.h  module_plt.h  new_operators.h  overwrite_analysis.h  path_builder.h  return_value.h  serialization.h  state.h  translator.h  vcall.h  vcall_types.h  vex.h  vtable_file.h  vtable_hierarchy.h  vtable_update.h  vtv_vcall_gt.h
patch/: heap_allocation_patch.diff
scripts/: ida_get_all_icalls.py  ida_get_hierarchies_through_rtti.py  ida_has_refs.py  ida_is_subvtable.py  ida_win_find_blacklist_functions.py  ida_win_get_hierarchies_through_rtti.py
src/: base_analysis.cpp  blacklist_functions.cpp  block.cpp  block_semantics.cpp  dump_file.cpp  expression.cpp  external_functions.cpp  function.cpp  got.cpp  idata.cpp  main.cpp  mapped_elf.cpp  mapped_pe.cpp  module_plt.cpp  new_operators.cpp  overwrite_analysis.cpp  path_builder.cpp  return_value.cpp  serialization.cpp  state.cpp  translator.cpp  vcall.cpp  vex.cpp  vtable_file.cpp  vtable_hierarchy.cpp  vtable_update.cpp  vtv_vcall_gt.cpp
tests/filezilla/: .gitattributes  config.cfg  config_INTRA.cfg  filezilla  filezilla.dmp  filezilla.gt_hierarchy_MULTI  filezilla.gt_hierarchy_MULTI_MAPPING  filezilla.gt_hierarchy_SINGLE  filezilla.gt_vtables  filezilla.hierarchy  filezilla_funcs.txt  (+11 more)
(+399 files in other folders)
